--- a/css/main.css
+++ b/css/main.css
@@ -166,3 +166,10 @@ a.article, a.article:hover {
         display: none;
     }
 }
+
+/* 1 Способ - Придать адаптивность всем изображениям. При этом данные изображения будут себя ввести как строчно-блочные элементы (inline-block) */
+img {
+
+    max-width: 60%;
+}
+/* 2 Способ - Придать адаптивность всем изображениям. При этом данные изображения будут себя ввести как блочные элементы (block) */
