--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,10 @@ body {
 
 p {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
+    font-size: 1.3em;
     font-weight: 300;
     line-height: 1.7em;
-    color: #999;
+    color: rgba(28, 9, 4, 0.95);
 }
 
 a, a:hover, a:focus {
